feat(prototype): Design main page of prototype

--- a/projects/prototype/src/app/app.component.html
+++ b/projects/prototype/src/app/app.component.html
@@ -1,8 +1,5 @@
 <app-navbar></app-navbar>
 
-<main class="background">
-  <div [@routerTransition]="getState(outlet)">
-    <router-outlet #outlet="outlet"></router-outlet>
-  </div>
-</main>
+<router-outlet></router-outlet>
 
+<app-footer class="mt-4"></app-footer>
