--- a/projects/prototype/src/app/component/navbar/navbar.component.html
+++ b/projects/prototype/src/app/component/navbar/navbar.component.html
@@ -1,7 +1,41 @@
-<nav class="navbar navbar-light">
+<nav class="navbar navbar-expand text-dark">
   <div class="container">
     <div class="navbar-brand" routerLink="/">
       <brand-icon-muzika></brand-icon-muzika>
     </div>
+
+    <div class="navbar-collapse">
+      <div class="ml-auto pr-4 border-right">
+        <div class="user-profile-img">
+          <img src="assets/person-1.png">
+        </div>
+      </div>
+      <div class="pl-4">
+        <div class="font-weight-bold text-dark">
+          Sarah
+        </div>
+        <div class="wallet">
+          0x2CFb8C41047F59D54c38d4cD84E8999e89ab3449
+        </div>
+      </div>
+    </div>
   </div>
 </nav>
+<div class="pt-4 text-dark">
+  <div class="container font-weight-bold px-0">
+    <ul class="row main-menu">
+      <li class="col active">
+        Home
+      </li>
+      <li class="col">
+        Top Sales
+      </li>
+      <li class="col">
+        Community
+      </li>
+      <li class="col">
+        Comming soon...
+      </li>
+    </ul>
+  </div>
+</div>
