--- a/projects/prototype/src/theme/_variables.scss
+++ b/projects/prototype/src/theme/_variables.scss
@@ -1,15 +1,58 @@
-$main-background: #010e1e;
+@import '~@angular/material/theming';
 
-$main-color-text: #ffffff;
-$main-color-hover-text: #ffffff;
-$main-color-active-text: #000000;
+/**
+ * Variables for Muzika App Theme ⓒ 2018
+ */
 
-$color-hover-background: rgba(255, 255, 255, 0.3);
+/**
+ * Main colors
+ */
+$background-color: #f0f0f0;
 
-$primary-color: #81d4fa;
-$primary-color-light: #b6ffff;
-$primary-color-dark: #4ba3c7;
+$primary-palette: $mat-blue-grey;
+$secondary-palette: (
+  50: #e1e7ed,
+  100: #c9d1d8,
+  200: #b2bac1,
+  300: #9aa4ac,
+  400: #828b93,
+  500: #6c757d,
+  600: #5c656d,
+  700: #414951,
+  800: #2d343a,
+  900: #21272d,
+  A100: #cfd8dc,
+  A200: #b0bec5,
+  A400: #78909c,
+  A700: #455a64,
+  contrast: (
+    50: $dark-primary-text,
+    100: $dark-primary-text,
+    200: $dark-primary-text,
+    300: $dark-primary-text,
+    400: $light-primary-text,
+    500: $light-primary-text,
+    600: $light-primary-text,
+    700: $light-primary-text,
+    800: $light-primary-text,
+    900: $light-primary-text,
+    A100: $dark-primary-text,
+    A200: $dark-primary-text,
+    A400: $light-primary-text,
+    A700: $light-primary-text,
+  )
+);
 
-$secondary-color: #ffca28;
-$secondary-color-light: #fffd61;
-$secondary-color-dark: #c79a00;
+$primary-color: map-get($primary-palette, 700);
+$secondary-color: map-get($secondary-palette, 500);
+
+$color-black: #33333D;
+
+/**
+ * Navbar Configuration
+ */
+$navbar-background: #ffffff;
+$navbar-text-color: mat-color($primary-palette, 700);
+// $navbar-height: 75px;
+$navbar-brand-size: 45px;
+
