--- a/projects/prototype/src/app/app.component.scss
+++ b/projects/prototype/src/app/app.component.scss
@@ -3,9 +3,5 @@
 :host {
   position: relative;
   display: block;
-}
-
-.background {
-  height: 100vh;
-  width: 100%;
+  background-color: $background-color;
 }
