--- a/projects/prototype/src/styles.scss
+++ b/projects/prototype/src/styles.scss
@@ -1,6 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
 @import 'theme/variables';
 
+/* Customize Bootstrap */
+$primary: $primary-color;
+
+@import '~bootstrap/scss/bootstrap';
+
+@import 'theme/material';
+
 @font-face {
   font-family: 'Libre Baskerville';
   font-style: italic;
@@ -20,6 +27,18 @@
   src: local('Libre Baskerville Bold'), local('LibreBaskerville-Bold'), url(https://fonts.gstatic.com/s/librebaskerville/v5/kmKiZrc3Hgbbcjq75U4uslyuy4kn0qviTgY5KcU.ttf) format('truetype');
 }
 
-.text-main-color {
-  color: $main-color-text !important;
+html, body {
+  background-color: $background-color;
+}
+
+.bg-primary {
+  color: mat-contrast($primary-palette, 700);
+}
+
+.bg-secondary {
+  color: mat-contrast($secondary-palette, 700);
+}
+
+.material-shadow {
+  box-shadow: 0 3px 1px -2px rgba(0,0,0,.2), 0 2px 2px 0 rgba(0,0,0,.14), 0 1px 5px 0 rgba(0,0,0,.12);
 }
