fix(prototype): change button color in main page
fix(prototype): change button color in main page

--- a/projects/prototype/src/app/page/main/main.component.html
+++ b/projects/prototype/src/app/page/main/main.component.html
@@ -83,8 +83,8 @@
           </h4>
 
           <div class="text-center mt-4">
-            <a class="small"> 거래 내역 </a>
-            <a class="small"> 토큰 전송 </a>
+            <button mat-button class="small"> 거래 내역 </button>
+            <button mat-button class="small"> 토큰 전송 </button>
           </div>
         </div>
 
