--- a/projects/prototype/src/app/page/main/main.component.scss
+++ b/projects/prototype/src/app/page/main/main.component.scss
@@ -3,3 +3,16 @@
   padding: 0;
   margin: 0;
 }
+
+.bg-primary {
+  button[mat-button] {
+    border-radius: 0;
+    /deep/ .mat-ripple-element {
+      background-color: rgba(255, 255, 255, 0.1);
+    }
+
+    /deep/ .mat-button-focus-overlay {
+      background-color: rgba(255, 255, 255, 0.12);
+    }
+  }
+}
