fix(prototype): change design

--- a/projects/prototype/src/app/component/navbar/navbar.component.html
+++ b/projects/prototype/src/app/component/navbar/navbar.component.html
@@ -21,7 +21,7 @@
     </div>
   </div>
 </nav>
-<div class="pt-4 text-dark">
+<div class="pt-4">
   <div class="container font-weight-bold px-0">
     <ul class="row main-menu">
       <li class="col active">
