--- a/projects/prototype/src/app/component/post-sheet/post-sheet.component.html
+++ b/projects/prototype/src/app/component/post-sheet/post-sheet.component.html
@@ -12,8 +12,12 @@
     </div>
   </div>
 
-  <div class="ml-auto d-flex align-items-center text-secondary">
-    <i class="fa fa-eye"></i> <span class="ml-2 mr-3"> {{sheet.views}} </span>
-    <i class="fa fa-heart"></i> <span class="ml-2"> {{sheet.likes}} </span>
+  <div class="ml-auto d-flex align-items-center text-secondary" style="width: 125px;">
+    <div class="w-50">
+      <i class="fa fa-eye"></i> <span class="ml-2 mr-3"> {{sheet.views}} </span>
+    </div>
+    <div class="w-50">
+      <i class="fa fa-heart"></i> <span class="ml-2"> {{sheet.likes}} </span>
+    </div>
   </div>
 </div>
