--- a/projects/prototype/src/app/page/main/main.component.html
+++ b/projects/prototype/src/app/page/main/main.component.html
@@ -2,13 +2,16 @@
   <div class="container px-0">
     <div class="row">
       <div class="col-lg-9">
+
+        <!--
         <div class="row pt-3">
           <div class="col" *ngFor="let sheet of topSheets">
             <app-artist-sheet [sheet]="sheet"></app-artist-sheet>
           </div>
         </div>
+        -->
 
-        <div class="bg-secondary my-4 p-4 material-shadow">
+        <div class="bg-secondary mt-3 p-4">
           <h4 class="m-0"> 악보 </h4>
         </div>
 
