refactor(prototype): refactor models (e.g. artist, post, user)

--- a/projects/prototype/src/app/component/post-sheet/post-sheet.component.html
+++ b/projects/prototype/src/app/component/post-sheet/post-sheet.component.html
@@ -1,6 +1,6 @@
 <div class="d-flex p-4 border-bottom">
   <div class="artist-img pr-4 border-right">
-    <img [src]="sheet.artist.profileImage">
+    <img [src]="sheet.author.profileImage">
   </div>
 
   <div class="ml-4">
@@ -8,7 +8,7 @@
       {{sheet.title}}
     </div>
     <div class="text-secondary h-50">
-      {{sheet.artist.name}}
+      {{sheet.author.name}}
     </div>
   </div>
 
