--- a/projects/prototype/src/app/component/artist-sheet/artist-sheet.component.html
+++ b/projects/prototype/src/app/component/artist-sheet/artist-sheet.component.html
@@ -2,9 +2,9 @@
 <mat-card>
   <mat-card-content>
     <mat-card-header>
-      <div mat-card-avatar [style.background-image]="'url(' + sheet.artist.profileImage + ')'"></div>
-      <mat-card-title class="font-weight-bold"> {{sheet.artist.name}} </mat-card-title>
-      <mat-card-subtitle> {{sheet.artist.area}} </mat-card-subtitle>
+      <div mat-card-avatar [style.background-image]="'url(' + sheet.author.profileImage + ')'"></div>
+      <mat-card-title class="font-weight-bold"> {{sheet.author.name}} </mat-card-title>
+      <mat-card-subtitle> {{sheet.author.area}} </mat-card-subtitle>
     </mat-card-header>
 
     <div class="sheet-title mt-3 font-weight-bold">
