--- a/projects/prototype/src/app/page/main/main.component.html
+++ b/projects/prototype/src/app/page/main/main.component.html
@@ -21,61 +21,17 @@
           </ul>
         </div>
 
-        <div class="bg-white mt-4 p-4 material-shadow">
+        <div class="bg-secondary mt-3 p-4">
           <h4 class="m-0"> 커뮤니티 </h4>
         </div>
 
-        <div class="row pt-3">
-          <div class="col">
-            <mat-card class="example-card">
-              <mat-card-header>
-                <div mat-card-avatar class="example-header-image"></div>
-                <mat-card-title>Shiba Inu</mat-card-title>
-                <mat-card-subtitle>Dog Breed</mat-card-subtitle>
-              </mat-card-header>
-              <mat-card-content>
-                <p>
-                  The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
-                  A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
-                  bred for hunting.
-                </p>
-              </mat-card-content>
-            </mat-card>
-          </div>
-          <div class="col">
-            <mat-card class="example-card">
-              <mat-card-header>
-                <div mat-card-avatar class="example-header-image"></div>
-                <mat-card-title>Shiba Inu</mat-card-title>
-                <mat-card-subtitle>Dog Breed</mat-card-subtitle>
-              </mat-card-header>
-              <mat-card-content>
-                <p>
-                  The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
-                  A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
-                  bred for hunting.
-                </p>
-              </mat-card-content>
-            </mat-card>
-          </div>
-          <div class="col">
-            <mat-card class="example-card">
-              <mat-card-header>
-                <div mat-card-avatar class="example-header-image"></div>
-                <mat-card-title>Shiba Inu</mat-card-title>
-                <mat-card-subtitle>Dog Breed</mat-card-subtitle>
-              </mat-card-header>
-              <mat-card-content>
-                <p>
-                  The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
-                  A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
-                  bred for hunting.
-                </p>
-              </mat-card-content>
-            </mat-card>
-          </div>
+        <div class="bg-white border border-bottom-0">
+          <ul class="posts">
+            <li app-post-list-item [post]="post" *ngFor="let post of posts"></li>
+          </ul>
         </div>
       </div>
+
       <div class="col pl-0">
         <div class="mt-3 py-4 px-4 bg-primary">
           <h3 class="text-center">
