--- a/projects/prototype/src/theme/_variables.scss
+++ b/projects/prototype/src/theme/_variables.scss
@@ -56,3 +56,5 @@ $navbar-text-color: mat-color($primary-palette, 700);
 // $navbar-height: 75px;
 $navbar-brand-size: 45px;
 
+$brand-color-1: #414951;
+$brand-color-2: #6c757d;
