feat(core): add reducers and utilities like jwt-interceptor, apiConfig etc.

--- a/projects/prototype/src/app/component/navbar/navbar.component.html
+++ b/projects/prototype/src/app/component/navbar/navbar.component.html
@@ -25,16 +25,19 @@
   <div class="container font-weight-bold px-0">
     <ul class="row main-menu">
       <li class="col active">
-        Home
+        <i class="fab fa-youtube"></i>
+        영상
       </li>
       <li class="col">
-        Top Sales
+        <i class="fa fa-users"></i>
+        커뮤니티
       </li>
       <li class="col">
-        Community
+        <i class="fa fa-music"></i>
+        악보
       </li>
       <li class="col">
-        Comming soon...
+        준비중...
       </li>
     </ul>
   </div>
