feat(prototype): add free/music/video boards and create mocks

--- a/projects/prototype/src/app/component/navbar/navbar.component.html
+++ b/projects/prototype/src/app/component/navbar/navbar.component.html
@@ -35,15 +35,15 @@
 <div class="pt-4">
   <div class="container font-weight-bold px-0">
     <ul class="row main-menu">
-      <li class="col active">
+      <li class="col" routerLink="/board/video" routerLinkActive="active">
         <i class="fab fa-youtube"></i>
         영상
       </li>
-      <li class="col">
+      <li class="col" routerLink="/board/free" routerLinkActive="active">
         <i class="fa fa-users"></i>
         커뮤니티
       </li>
-      <li class="col">
+      <li class="col" routerLink="/board/music" routerLinkActive="active">
         <i class="fa fa-music"></i>
         악보
       </li>
