--- a/projects/prototype/src/app/component/navbar/navbar.component.scss
+++ b/projects/prototype/src/app/component/navbar/navbar.component.scss
@@ -33,14 +33,18 @@
   margin: 0;
 
   li {
-    cursor: pointer;
     text-align: center;
     padding-bottom: 1.5rem;
     color: map-get($secondary-palette, 200);
+    outline: none;
 
     &.active {
       border-bottom: 5px solid $primary-color;
       color: $primary-color;
+    }
+
+    &[routerLink] {
+      cursor: pointer;
     }
   }
 }
