--- a/projects/prototype/src/styles.scss
+++ b/projects/prototype/src/styles.scss
@@ -5,6 +5,13 @@
 $primary: $primary-color;
 $secondary: $secondary-color;
 
+$container-max-widths: (
+  sm: 540px,
+  md: 720px,
+  lg: 960px,
+  xl: 1140px
+);
+
 @import '~bootstrap/scss/bootstrap';
 
 @import 'theme/material';
