--- a/projects/viewer/src/app/components/navbar/navbar.component.html
+++ b/projects/viewer/src/app/components/navbar/navbar.component.html
@@ -5,6 +5,9 @@
     </div>
 
     <div class="navbar-collapse">
+      <div class="flex-grow-1 text-center">
+        검색
+      </div>
       <ng-container *ngIf="currentUser; else loggedInBlock">
         <div class="ml-auto pr-4 border-right">
           <div class="user-profile-img">
