--- a/projects/viewer/src/app/components/navbar/navbar.component.scss
+++ b/projects/viewer/src/app/components/navbar/navbar.component.scss
@@ -33,14 +33,17 @@
   margin: 0;
 
   li {
+    width: 140px;
     text-align: center;
-    padding-bottom: 1.5rem;
+    //padding-bottom: 1.5rem;
     color: map-get($secondary-palette, 200);
     outline: none;
+    transition: font-size 0.1s ease-in-out;
 
     &.active {
-      border-bottom: 5px solid $primary-color;
-      color: $primary-color;
+      //border-bottom: 5px solid $primary-color;
+      color: #fff;
+      font-size: 115%;
     }
 
     &[routerLink] {
