fix(viewer): change navbar color

--- a/projects/viewer/src/theme/_variables.scss
+++ b/projects/viewer/src/theme/_variables.scss
@@ -51,10 +51,12 @@ $color-black: #33333D;
 /**
  * Navbar Configuration
  */
-$navbar-background: #ffffff;
+$navbar-background: $primary-color;
 $navbar-text-color: mat-color($primary-palette, 700);
 // $navbar-height: 75px;
-$navbar-brand-size: 45px;
+$navbar-brand-size: 38px;
 
-$brand-color-1: #414951;
-$brand-color-2: #6c757d;
+//$brand-color-1: #414951;
+$brand-color-1: #ffffff;
+//$brand-color-2: #6c757d;
+$brand-color-2: #ffffff;
