--- a/projects/viewer/src/modules/post/pages/post-list/free/post-free.component.html
+++ b/projects/viewer/src/modules/post/pages/post-list/free/post-free.component.html
@@ -1,4 +1,8 @@
-<div class="container pt-3 px-0">
+<div class="bg-white">
+  <router-outlet></router-outlet>
+</div>
+
+<div class="container px-0">
   <div class="row">
     <div class="col-3">
       <div class="bg-white bg-white tag-section border p-3">
@@ -23,7 +27,7 @@
           </thead>
           <tbody>
           <tr *ngFor="let post of posts">
-            <td> {{post.title}} </td>
+            <td> <a [routerLink]="[post.postId]"> {{post.title}} </a> </td>
             <td> {{post.author.name}} </td>
             <td> {{post.views}} </td>
             <td> {{post.likes}} </td>
