--- a/projects/viewer/src/modules/post/pages/post-list/video/post-video.component.html
+++ b/projects/viewer/src/modules/post/pages/post-list/video/post-video.component.html
@@ -1,3 +1,7 @@
+<div class="container">
+  <router-outlet></router-outlet>
+</div>
+
 <div class="container pt-3 px-0">
   <div class="row">
     <div class="col-3">
@@ -23,7 +27,7 @@
           </thead>
           <tbody>
           <tr *ngFor="let post of posts">
-            <td> {{post.title}} </td>
+            <td> <a [routerLink]="[post.postId]"> {{post.title}} </a> </td>
             <td> {{post.author.name}} </td>
             <td> {{post.views}} </td>
             <td> {{post.likes}} </td>
