refactor(login): move login functions to login component from navbar

--- a/projects/viewer/src/app/components/navbar/navbar.component.html
+++ b/projects/viewer/src/app/components/navbar/navbar.component.html
@@ -48,9 +48,9 @@
       <ng-template #loggedInBlock>
         <div class="ml-auto pr-4">
           <!-- @TODO Allowed other wallets (now only support metamask) -->
-          <button mat-button color="white" (click)="login()">
+          <a mat-button color="white" routerLink="/login">
             로그인
-          </button>
+          </a>
         </div>
       </ng-template>
     </div>
