refactor(user.action): implement login method with 1 parameter (address)

--- a/projects/viewer/src/app/pages/login/login.component.html
+++ b/projects/viewer/src/app/pages/login/login.component.html
@@ -4,5 +4,8 @@
   </div>
 </div>
 <div class="container">
+  <a class="btn btn-primary" (click)="login()">
+    test login
+  </a>
   Login Page
 </div>
