--- a/projects/viewer/src/modules/post/pages/post-list/free/post-free.component.html
+++ b/projects/viewer/src/modules/post/pages/post-list/free/post-free.component.html
@@ -38,3 +38,9 @@
     </div>
   </div>
 </div>
+
+<div class="write-overlay">
+  <button mat-fab color="accent" routerLink="/board/free/write">
+    <i class="fa fa-pencil"></i>
+  </button>
+</div>
