--- a/projects/viewer/src/modules/post/pages/post-list/music/post-music.component.html
+++ b/projects/viewer/src/modules/post/pages/post-list/music/post-music.component.html
@@ -1,8 +1,8 @@
-<div class="container">
+<div class="bg-white">
   <router-outlet></router-outlet>
 </div>
 
-<div class="container pt-3 px-0">
+<div class="container px-0">
   <div class="row">
     <div class="col-3">
       <div class="bg-white bg-white tag-section border p-3">
@@ -37,4 +37,10 @@
       </div>
     </div>
   </div>
+</div>
+
+<div class="write-overlay">
+  <button mat-fab color="accent" routerLink="/board/music/write">
+    <i class="fa fa-pencil"></i>
+  </button>
 </div>
