--- a/projects/viewer/src/styles.scss
+++ b/projects/viewer/src/styles.scss
@@ -54,3 +54,24 @@ html, body {
 button:focus {
   outline: none;
 }
+
+/* Scrollbar design */
+* {
+  &::-webkit-scrollbar {
+    width: 10px;
+
+    * {
+      background: transparent;
+    }
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background: #666;
+    border-radius: 20px;
+  }
+
+  &::-webkit-scrollbar-track {
+    background: #ddd;
+    border-radius: 20px;
+  }
+}
