--- a/projects/viewer/src/app/components/navbar/navbar.component.html
+++ b/projects/viewer/src/app/components/navbar/navbar.component.html
@@ -10,11 +10,11 @@
           <i class="fab fa-youtube"></i>
           영상
         </li>
-        <li routerLink="/board/free" routerLinkActive="active">
+        <li routerLink="/board/community" routerLinkActive="active">
           <i class="fa fa-users"></i>
           커뮤니티
         </li>
-        <li routerLink="/board/music" routerLinkActive="active">
+        <li routerLink="/board/sheet" routerLinkActive="active">
           <i class="fa fa-music"></i>
           악보
         </li>
@@ -64,12 +64,12 @@
         <i class="fab fa-youtube"></i>
         영상
       </li>
-      <li class="col" routerLink="/board/free" routerLinkActive="active">
+      <li class="col" routerLink="/board/community" routerLinkActive="active">
         <i class="fa fa-users"></i>
         커뮤니티
       </li>
-      <li class="col" routerLink="/board/music" routerLinkActive="active">
-        <i class="fa fa-music"></i>
+      <li class="col" routerLink="/board/sheet" routerLinkActive="active">
+        <i class="fa fa-sheet"></i>
         악보
       </li>
       <li class="col">
