--- a/projects/viewer/src/modules/post/pages/post-list/community/post-community.component.html
+++ b/projects/viewer/src/modules/post/pages/post-list/community/post-community.component.html
@@ -40,7 +40,7 @@
 </div>
 
 <div class="write-overlay">
-  <button mat-fab color="accent" routerLink="/board/music/write">
+  <button mat-fab color="accent" routerLink="/board/community/write">
     <i class="fa fa-pencil"></i>
   </button>
 </div>
