--- a/projects/viewer/src/styles.scss
+++ b/projects/viewer/src/styles.scss
@@ -12,6 +12,10 @@ $container-max-widths: (
   xl: 1280px
 );
 
+$border-radius: 2px;
+$border-radius-lg: 2px;
+$border-radius-sm: 2px;
+
 @import '~bootstrap/scss/bootstrap';
 
 @import 'theme/material';
