--- a/projects/viewer/src/modules/post/pages/post-write/video/post-video-write.component.html
+++ b/projects/viewer/src/modules/post/pages/post-write/video/post-video-write.component.html
@@ -22,7 +22,11 @@
           <div class="youtube-form">
             <input type="text" class="form-control"
                    placeholder="https://www.youtube.com/watch?v=..."
-                   ngModel>
+                   ngModel (ngModelChange)="onChangeYoutubeURL($event)"
+                   [ngModelOptions]="{standalone: true}">
+            <div class="youtube-thumbnail" *ngIf="currentYoutubeVideoId">
+              <img [src]="'https://img.youtube.com/vi/' + currentYoutubeVideoId + '/mqdefault.jpg'">
+            </div>
           </div>
 
           <h5> 태그 </h5>
