--- a/projects/viewer/src/modules/post/pages/post-write/post-write.scss
+++ b/projects/viewer/src/modules/post/pages/post-write/post-write.scss
@@ -25,8 +25,8 @@ form {
     border: none;
     background: transparent;
     border-bottom: 1px solid #eee;
-    font-size: 1.8rem;
-    font-weight: 500;
+    font-size: 1.4rem;
+    font-weight: bold;
     padding: 12px;
     outline: none;
   }
