fix(viewer/post-list): change layout post-list

--- a/projects/viewer/src/modules/post/pages/post-list/sheet/post-sheet.component.html
+++ b/projects/viewer/src/modules/post/pages/post-list/sheet/post-sheet.component.html
@@ -2,9 +2,9 @@
   <router-outlet></router-outlet>
 </div>
 
-<div class="container px-0">
+<section class="post-list-section">
   <div class="row">
-    <div class="col-3">
+    <div class="tag-section">
       <div class="bg-white bg-white tag-section border p-3">
         <div class="tags-all font-weight-bold mb-2"> 태그 </div>
         <ul class="tags">
@@ -37,7 +37,7 @@
       </div>
     </div>
   </div>
-</div>
+</section>
 
 <div class="write-overlay">
   <button mat-fab color="accent" routerLink="/board/sheet/write">
