--- a/projects/viewer/src/modules/post/pages/post-list/community/post-community.component.html
+++ b/projects/viewer/src/modules/post/pages/post-list/community/post-community.component.html
@@ -1,43 +1,43 @@
-<div class="bg-white">
-  <router-outlet></router-outlet>
-</div>
-
-<div class="container px-0">
+<section class="post-list-section">
   <div class="row">
-    <div class="col-3">
-      <div class="bg-white bg-white tag-section border p-3">
-        <div class="tags-all font-weight-bold mb-2"> 태그 </div>
-        <ul class="tags">
-          <li *ngFor="let tag of tags">
-            <a> {{tag.name}} </a>
-          </li>
-        </ul>
-      </div>
+    <div class="tag-section">
+      <div class="tags-all font-weight-bold mb-2"> 태그 </div>
+      <ul class="tags">
+        <li *ngFor="let tag of tags">
+          <a> {{tag.name}} </a>
+        </li>
+      </ul>
     </div>
-    <div class="col">
-      <div class="bg-white border">
-        <table class="table">
-          <thead>
-          <tr>
-            <th> 제목 </th>
-            <th width="140"> 글쓴이 </th>
-            <th width="130"> 조회수 </th>
-            <th width="130"> 좋아요수 </th>
-          </tr>
-          </thead>
-          <tbody>
-          <tr *ngFor="let post of posts">
-            <td> <a [routerLink]="[post.postId]"> {{post.title}} </a> </td>
-            <td> {{post.author.name}} </td>
-            <td> {{post.views}} </td>
-            <td> {{post.likes}} </td>
-          </tr>
-          </tbody>
-        </table>
+    <div class="col px-0">
+      <div class="scroll-post-content">
+        <div class="bg-white">
+          <router-outlet></router-outlet>
+        </div>
+
+        <div class="bg-white border">
+          <table class="table">
+            <thead>
+            <tr>
+              <th> 제목 </th>
+              <th width="140"> 글쓴이 </th>
+              <th width="130"> 조회수 </th>
+              <th width="130"> 좋아요수 </th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr *ngFor="let post of posts">
+              <td> <a [routerLink]="[post.postId]"> {{post.title}} </a> </td>
+              <td> {{post.author.name}} </td>
+              <td> {{post.views}} </td>
+              <td> {{post.likes}} </td>
+            </tr>
+            </tbody>
+          </table>
+        </div>
       </div>
     </div>
   </div>
-</div>
+</section>
 
 <div class="write-overlay">
   <button mat-fab color="accent" routerLink="/board/community/write">
