--- a/projects/viewer/src/modules/post/pages/post-list/post-list.scss
+++ b/projects/viewer/src/modules/post/pages/post-list/post-list.scss
@@ -1,23 +1,31 @@
 @import '../../../../theme/variables';
 
-.tags-all {
-  font-size: 1.4rem;
-}
+.tag-section {
+  width: 180px;
+  margin-left: 15px;
+  background: #2d343a;
+  color: #fff;
+  padding: 12px;
 
-ul.tags {
-  padding-left: 0;
-  list-style: none;
+  .tags-all {
+    font-size: 1.4rem;
+  }
 
-  li {
-    padding: 4px 4px 4px 0;
+  ul.tags {
+    padding-left: 0;
+    list-style: none;
 
-    a {
-      font-size: 1.2rem;
-      cursor: pointer;
-      transition: color 0.2s ease-in-out;
+    li {
+      padding: 4px 4px 4px 0;
 
-      &:hover {
-        color: #5bc0de;
+      a {
+        font-size: 1.2rem;
+        cursor: pointer;
+        transition: color 0.2s ease-in-out;
+
+        &:hover {
+          color: #5bc0de;
+        }
       }
     }
   }
@@ -27,4 +35,12 @@ ul.tags {
   position: fixed;
   bottom: 32px;
   right: 32px;
+}
+
+.post-list-section {
+  height: 100%;
+
+  .row {
+    height: inherit;
+  }
 }
