merge(master): sync to jch works

--- a/projects/viewer/src/modules/post/pages/post-item-detail/community/post-community-item-detail.component.html
+++ b/projects/viewer/src/modules/post/pages/post-item-detail/community/post-community-item-detail.component.html
@@ -9,7 +9,7 @@
             <h1 itemprop="headline">{{post.title}}</h1>
           </header>
 
-          <main [froalaView]="post.description"></main>
+          <main [froalaView]="post.content"></main>
         </article>
       </section>
     </div>
