--- a/projects/prototype/src/modules/post/pages/post-list/free/post-free.component.html
+++ b/projects/prototype/src/modules/post/pages/post-list/free/post-free.component.html
@@ -23,7 +23,7 @@
           </thead>
           <tbody>
           <tr *ngFor="let post of posts">
-            <td> {{post.title}} </td>
+            <td> <a [routerLink]="[post.post_id]"> {{post.title}} </a> </td>
             <td> {{post.author.name}} </td>
             <td> {{post.views}} </td>
             <td> {{post.likes}} </td>
