fix(viewer): change layout post-list and refactor tag types to string

--- a/projects/viewer/src/modules/post/components/post-item-detail-header/post-item-detail-header.component.html
+++ b/projects/viewer/src/modules/post/components/post-item-detail-header/post-item-detail-header.component.html
@@ -1,16 +1,12 @@
 <div class="post-header">
   <img *ngIf="!!post" [src]="post.author.profileImage">
-  <a class="float-right text-center post-header-following">
-    <i class="fa fa-user-plus"></i>
-    팔로잉
-  </a>
   <div>
     <a><b>{{post.author.name}}</b></a>
     <!--<span app-level-icon [user]="post.author"></span>-->
 
     <div class="post-header-extra">
       <small *ngFor="let tag of post.tags">
-        {{tag.name}}
+        {{tag}}
       </small>
       <small>
         <!--<time>{{post.time}}</time>-->
