--- a/projects/viewer/src/modules/post/pages/post-list/post-list.scss
+++ b/projects/viewer/src/modules/post/pages/post-list/post-list.scss
@@ -43,4 +43,10 @@
   .row {
     height: inherit;
   }
+
+  .scroll-post-content {
+    height: 100%;
+    overflow-x: hidden;
+    overflow-y: auto;
+  }
 }
